--- a/src/sass/ratchet.scss
+++ b/src/sass/ratchet.scss
@@ -229,7 +229,7 @@ a {
 
 /* Centered text in the .bar-title */
 .bar-title .title {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   display: block;
