--- a/src/sass/cube.scss
+++ b/src/sass/cube.scss
@@ -1,11 +1,12 @@
-@import '_base';
+@import 'cube-base';
 @import 'cube-form';
 @import 'cube-list';
 @import 'cube-split';
 @import 'cube-loader';
 @import 'cube-dialog';
 @import 'cube-ul';
-@import 'button';
+@import 'cube-button';
+@import 'cube-datepicker';
 
 @import 'cube-slider';
 @import 'ratchet';
